--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parse": "^0.1.0",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "mysql": "^2.18.1",
     "randomstring": "^1.2.2",
